<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00FFFF"
    android:orientation="horizontal"
    android:padding="2dp">

    <TextView
        android:id="@+id/tv_select"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/select"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tv_select_all"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/select_all"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/copy"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="#FFFFFF" />

</LinearLayout>
